# backend/docs/swagger.json
@@ -863,7 +863,7 @@
                         "name": "body",
                         "in": "body",
                         "schema": {
-                            "$ref": "#/definitions/admin.AdminCompleteOrderRequest"
+                            "$ref": "#/definitions/%E7%AE%A1%E7%90%86%E7%AB%AF%E8%A1%A5%E5%8D%95%E8%AF%B7%E6%B1%82"
                         }
                     }
                 ],
@@ -3661,18 +3661,6 @@
         }
     },
     "definitions": {
-        "admin.AdminCompleteOrderRequest": {
-            "type": "object",
-            "properties": {
-                "force": {
-                    "description": "强制补单（canceled/failed 高危路径，须填 memo）",
-                    "type": "boolean"
-                },
-                "memo": {
-                    "type": "string"
-                }
-            }
-        },
         "admin.AdminUserDetailResponse": {
             "type": "object",
             "properties": {
@@ -4774,6 +4762,18 @@
                 },
                 "data": {},
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "管理端补单请求": {
+            "type": "object",
+            "properties": {
+                "force": {
+                    "description": "强制补单（canceled/failed 高危路径，须填 memo）",
+                    "type": "boolean"
+                },
+                "memo": {
                     "type": "string"
                 }
             }
